NGINX log analyzer ofr api-proxy delay

--- a/app-analyzers/collect-nginx-statuses.ipynb
+++ b/app-analyzers/collect-nginx-statuses.ipynb
@@ -2,37 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pip in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (23.3.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: boto3 in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (1.33.1)\n",
-      "Requirement already satisfied: prettytable in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (3.9.0)\n",
-      "Requirement already satisfied: construct in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (2.10.70)\n",
-      "Requirement already satisfied: botocore<1.34.0,>=1.33.1 in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (from boto3) (1.33.1)\n",
-      "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (from boto3) (1.0.1)\n",
-      "Requirement already satisfied: s3transfer<0.9.0,>=0.8.0 in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (from boto3) (0.8.0)\n",
-      "Requirement already satisfied: wcwidth in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (from prettytable) (0.2.6)\n",
-      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (from botocore<1.34.0,>=1.33.1->boto3) (2.8.2)\n",
-      "Requirement already satisfied: urllib3<2.1,>=1.25.4 in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (from botocore<1.34.0,>=1.33.1->boto3) (1.26.15)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.34.0,>=1.33.1->boto3) (1.16.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install --upgrade pip\n",
-    "%pip install boto3 prettytable construct"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,39 +33,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 1 tasks running in acl-playground/us-west-2\n",
-      "Found 2 tasks running in acl-staging/us-west-2\n",
-      "Task arn:aws:ecs:us-west-2:649973207834:task/EcsCluster1-main/cf6504ed5494492b88f7e84b3cb852ae failed: An error occurred (InvalidParameterException) when calling the ExecuteCommand operation: The execute command failed because execute command was not enabled when the task was run or the execute command agent isn’t running. Wait and try again or run a new task with execute command enabled and try again.\n",
-      "Found 3 tasks running in acl-staging/us-east-1\n",
-      "Found 33 tasks running in acl-production/us-east-1\n",
-      "Found 26 tasks running in acl-production/eu-central-1\n",
+      "Found 29 tasks running in acl-production/us-east-1\n",
+      "Found 45 tasks running in acl-production/eu-central-1\n",
       "Found 4 tasks running in acl-production/af-south-1\n",
       "Found 4 tasks running in acl-production/ca-central-1\n",
       "Found 4 tasks running in acl-production/ap-northeast-1\n",
+      "Task arn:aws:ecs:ap-northeast-1:707785685172:task/EcsCluster1-main/357a2963f247463dbb96123450a10a96 failed: TLS/SSL connection has been closed (EOF) (_ssl.c:1129)\n",
+      "Task arn:aws:ecs:ap-northeast-1:707785685172:task/EcsCluster1-main/8477952279314a0ab70cbc9d8275861c failed: TLS/SSL connection has been closed (EOF) (_ssl.c:1129)\n",
       "Found 6 tasks running in acl-production/ap-southeast-1\n",
       "Found 6 tasks running in acl-production/ap-southeast-2\n",
+      "Task arn:aws:ecs:ap-southeast-2:707785685172:task/EcsCluster1-main/e15dc9e671da43f19f13b1df22caf26e failed: TLS/SSL connection has been closed (EOF) (_ssl.c:1129)\n",
       "Found 6 tasks running in acl-production/sa-east-1\n",
       "+----------------+----------------+-------+--------+---------+---------+----------+---------+---------+---------+-----------+\n",
       "|    Profile     |     Region     | tasks | active | handled | accepts | requests | reading | writing | waiting | queue_avg |\n",
       "+----------------+----------------+-------+--------+---------+---------+----------+---------+---------+---------+-----------+\n",
-      "| acl-production |  eu-central-1  |   26  |   47   | 1389876 | 1389876 | 1672307  |    0    |    29   |    18   |     0     |\n",
-      "| acl-production |   us-east-1    |   33  |  153   |  515632 |  515632 |  886885  |    0    |    46   |   107   |    0.6    |\n",
-      "| acl-production | ap-southeast-1 |   6   |   29   |  60994  |  60994  |  132728  |    0    |    6    |    23   |    0.8    |\n",
-      "| acl-production | ap-southeast-2 |   6   |   8    |  61513  |  61513  |  65470   |    0    |    6    |    2    |     0     |\n",
-      "| acl-production |   af-south-1   |   4   |   6    |  44364  |  44364  |  62535   |    0    |    4    |    2    |     0     |\n",
-      "| acl-production |   sa-east-1    |   6   |   30   |  28995  |  28995  |  50640   |    0    |    6    |    24   |    1.0    |\n",
-      "| acl-production | ap-northeast-1 |   4   |   4    |  37470  |  37470  |  49629   |    0    |    4    |    0    |     0     |\n",
-      "| acl-production |  ca-central-1  |   4   |   21   |  19317  |  19317  |  33269   |    0    |    4    |    17   |    1.2    |\n",
-      "|  acl-staging   |   us-east-1    |   3   |   13   |   1044  |   1044  |  29081   |    0    |    3    |    10   |    0.3    |\n",
-      "|  acl-staging   |   us-west-2    |   2   |   2    |   545   |   545   |   607    |    0    |    1    |    1    |     0     |\n",
-      "| acl-playground |   us-west-2    |   1   |   1    |   447   |   447   |   449    |    0    |    1    |    0    |     0     |\n",
+      "| acl-production |  eu-central-1  |   45  |  145   | 3126755 | 3126755 | 3566959  |    0    |    60   |    85   |     0     |\n",
+      "| acl-production | ap-southeast-1 |   6   |   27   |  481320 |  481320 | 1014881  |    0    |    19   |    8    |     0     |\n",
+      "| acl-production |   sa-east-1    |   6   |   8    |  338155 |  338155 |  548181  |    0    |    6    |    2    |     0     |\n",
+      "| acl-production |   af-south-1   |   4   |   15   |  193438 |  193438 |  265707  |    0    |    4    |    11   |     0     |\n",
+      "| acl-production | ap-southeast-2 |   6   |   10   |  235556 |  235556 |  261649  |    0    |    5    |    5    |     0     |\n",
+      "| acl-production |  ca-central-1  |   4   |   8    |  180665 |  180665 |  256016  |    0    |    4    |    4    |     0     |\n",
+      "| acl-production |   us-east-1    |   29  |  167   |  108765 |  108765 |  180228  |    0    |    39   |   128   |     0     |\n",
+      "| acl-production | ap-northeast-1 |   4   |   3    |  134431 |  134431 |  142023  |    0    |    2    |    1    |     0     |\n",
       "+----------------+----------------+-------+--------+---------+---------+----------+---------+---------+---------+-----------+\n"
      ]
     }
@@ -218,8 +184,8 @@
     "            except Exception as e:\n",
     "                print(f\"Task {task_arn} failed: {e}\")\n",
     "\n",
-    "    unicorn_workers = 4\n",
-    "    handling = aggregated_stats[\"active\"] - aggregated_stats[\"instance_count\"] * unicorn_workers\n",
+    "    workers = 10\n",
+    "    handling = aggregated_stats[\"active\"] - aggregated_stats[\"instance_count\"] * workers\n",
     "    aggregated_stats[\"queue_avg\"] = round(float(handling) / aggregated_stats[\"instance_count\"],1) if handling > 0 else 0\n",
     "    return aggregated_stats\n",
     "\n",
@@ -227,13 +193,14 @@
     "\n",
     "# Specify your cluster and service name\n",
     "cluster_name = 'EcsCluster1-main'\n",
+    "#service_name = 'api_proxy-application-fargate-main'\n",
     "service_name = 'projects-application-fargate-main'\n",
     "#service_name = 'results-application-fargate-main'\n",
     "\n",
     "environments = [\n",
-    "    ('acl-playground', 'us-west-2'),  # playground\n",
-    "    ('acl-staging', 'us-west-2'),  # staging\n",
-    "    ('acl-staging', 'us-east-1'),  # preprod?\n",
+    "    #('acl-playground', 'us-west-2'),  # playground\n",
+    "    #('acl-staging', 'us-west-2'),  # staging\n",
+    "    #('acl-staging', 'us-east-1'),  # preprod?\n",
     "    ('acl-production', 'us-east-1'),\n",
     "    ('acl-production', 'eu-central-1'),\n",
     "    ('acl-production', 'af-south-1'),\n",
@@ -297,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -305,10 +272,10 @@
      "output_type": "stream",
      "text": [
       "Found 1 tasks running in acl-playground/us-west-2\n",
-      "Found 2 tasks running in acl-staging/us-west-2\n",
+      "Found 1 tasks running in acl-staging/us-west-2\n",
       "Found 3 tasks running in acl-staging/us-east-1\n",
-      "Found 33 tasks running in acl-production/us-east-1\n",
-      "Found 26 tasks running in acl-production/eu-central-1\n",
+      "Found 24 tasks running in acl-production/us-east-1\n",
+      "Found 32 tasks running in acl-production/eu-central-1\n",
       "Found 4 tasks running in acl-production/af-south-1\n",
       "Found 4 tasks running in acl-production/ca-central-1\n",
       "Found 4 tasks running in acl-production/ap-northeast-1\n",
@@ -384,8 +351,8 @@
     "\n",
     "\n",
     "for profile, region in environments:\n",
-    "    vcpu, memory, unicorn_workers = get_service_params(profile, region, cluster_name, service_name)\n",
-    "    table.add_row([profile, region, vcpu, f\"{memory} GB\", unicorn_workers])\n",
+    "    vcpu, memory, workers = get_service_params(profile, region, cluster_name, service_name)\n",
+    "    table.add_row([profile, region, vcpu, f\"{memory} GB\", workers])\n",
     "\n",
     "print(table)\n"
    ]
@@ -414,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
