--- a/app-analyzers/projects-params.ipynb
+++ b/app-analyzers/projects-params.ipynb
@@ -2,26 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "111295.80s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n",
-      "Requirement already satisfied: pip in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (23.3.2)\n",
+      "Requirement already satisfied: pip in /Users/psaghelyi-remote/.pyenv/versions/3.9.18/envs/AWS-utils/lib/python3.9/site-packages (24.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "111303.83s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n",
-      "Requirement already satisfied: boto3 in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (1.33.1)\n",
-      "Requirement already satisfied: prettytable in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (3.9.0)\n",
-      "Requirement already satisfied: botocore<1.34.0,>=1.33.1 in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (from boto3) (1.33.1)\n",
-      "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (from boto3) (1.0.1)\n",
-      "Requirement already satisfied: s3transfer<0.9.0,>=0.8.0 in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (from boto3) (0.8.0)\n",
-      "Requirement already satisfied: wcwidth in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (from prettytable) (0.2.6)\n",
-      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (from botocore<1.34.0,>=1.33.1->boto3) (2.8.2)\n",
-      "Requirement already satisfied: urllib3<2.1,>=1.25.4 in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (from botocore<1.34.0,>=1.33.1->boto3) (1.26.15)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.34.0,>=1.33.1->boto3) (1.16.0)\n",
+      "Requirement already satisfied: boto3 in /Users/psaghelyi-remote/.pyenv/versions/3.9.18/envs/AWS-utils/lib/python3.9/site-packages (1.34.55)\n",
+      "Requirement already satisfied: prettytable in /Users/psaghelyi-remote/.pyenv/versions/3.9.18/envs/AWS-utils/lib/python3.9/site-packages (3.10.0)\n",
+      "Requirement already satisfied: botocore<1.35.0,>=1.34.55 in /Users/psaghelyi-remote/.pyenv/versions/3.9.18/envs/AWS-utils/lib/python3.9/site-packages (from boto3) (1.34.55)\n",
+      "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in /Users/psaghelyi-remote/.pyenv/versions/3.9.18/envs/AWS-utils/lib/python3.9/site-packages (from boto3) (1.0.1)\n",
+      "Requirement already satisfied: s3transfer<0.11.0,>=0.10.0 in /Users/psaghelyi-remote/.pyenv/versions/3.9.18/envs/AWS-utils/lib/python3.9/site-packages (from boto3) (0.10.0)\n",
+      "Requirement already satisfied: wcwidth in /Users/psaghelyi-remote/.pyenv/versions/3.9.18/envs/AWS-utils/lib/python3.9/site-packages (from prettytable) (0.2.13)\n",
+      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /Users/psaghelyi-remote/.pyenv/versions/3.9.18/envs/AWS-utils/lib/python3.9/site-packages (from botocore<1.35.0,>=1.34.55->boto3) (2.9.0.post0)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.25.4 in /Users/psaghelyi-remote/.pyenv/versions/3.9.18/envs/AWS-utils/lib/python3.9/site-packages (from botocore<1.35.0,>=1.34.55->boto3) (1.26.18)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/psaghelyi-remote/.pyenv/versions/3.9.18/envs/AWS-utils/lib/python3.9/site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.35.0,>=1.34.55->boto3) (1.16.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -33,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,38 +221,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "acl-playground us-west-2 - Actual Tasks: 1 (25.0%) CPU: 10.36%  Memory: 50.33%\n",
-      "acl-staging us-west-2 - Actual Tasks: 1 (25.0%) CPU: 16.25%  Memory: 65.84%\n",
-      "acl-staging us-east-1 - Actual Tasks: 3 (N/A%) CPU: 5.93%  Memory: 63.53%\n",
-      "acl-production us-east-1 - Actual Tasks: 33 (68.75%) CPU: 15.06%  Memory: 37.89%\n",
-      "acl-production eu-central-1 - Actual Tasks: 26 (52.0%) CPU: 10.91%  Memory: 45.18%\n",
-      "acl-production af-south-1 - Actual Tasks: 4 (12.5%) CPU: 11.04%  Memory: 65.53%\n",
-      "acl-production ca-central-1 - Actual Tasks: 4 (12.5%) CPU: 13.31%  Memory: 60.64%\n",
-      "acl-production ap-northeast-1 - Actual Tasks: 4 (12.5%) CPU: 12.3%  Memory: 53.0%\n",
-      "acl-production ap-southeast-1 - Actual Tasks: 6 (12.5%) CPU: 22.39%  Memory: 71.34%\n",
-      "acl-production ap-southeast-2 - Actual Tasks: 6 (12.5%) CPU: 2.63%  Memory: 31.41%\n",
-      "acl-production sa-east-1 - Actual Tasks: 6 (12.5%) CPU: 10.16%  Memory: 56.42%\n",
+      "acl-playground us-west-2 - Actual Tasks: 1 (25.0%) CPU: 6.27%  Memory: 39.82%\n",
+      "acl-staging us-west-2 - Actual Tasks: 4 (100.0%) CPU: 17.17%  Memory: 69.35%\n",
+      "acl-staging us-east-1 - Actual Tasks: 3 (N/A%) CPU: 24.56%  Memory: 82.64%\n",
+      "acl-production us-east-1 - Actual Tasks: 20 (41.67%) CPU: 22.15%  Memory: 65.01%\n",
+      "acl-production eu-central-1 - Actual Tasks: 31 (62.0%) CPU: 16.27%  Memory: 60.57%\n",
+      "acl-production af-south-1 - Actual Tasks: 4 (12.5%) CPU: 8.37%  Memory: 64.29%\n",
+      "acl-production ca-central-1 - Actual Tasks: 4 (12.5%) CPU: 10.97%  Memory: 89.46%\n",
+      "acl-production ap-northeast-1 - Actual Tasks: 4 (12.5%) CPU: 11.21%  Memory: 63.06%\n",
+      "acl-production ap-southeast-1 - Actual Tasks: 6 (12.5%) CPU: 40.95%  Memory: 85.58%\n",
+      "acl-production ap-southeast-2 - Actual Tasks: 6 (12.5%) CPU: 3.08%  Memory: 43.0%\n",
+      "acl-production sa-east-1 - Actual Tasks: 6 (12.5%) CPU: 9.94%  Memory: 92.45%\n",
       "+----------------+----------------+-----+-----+-----+-------+-----------+---------+---------+---------+---------+---------+---------+\n",
       "|    Profile     |     Region     | Min | Max | Act |   %   | Algorithm | CPU Avg | CPU Min | CPU Max | Mem Avg | Mem Min | Mem Max |\n",
       "+----------------+----------------+-----+-----+-----+-------+-----------+---------+---------+---------+---------+---------+---------+\n",
-      "| acl-playground |   us-west-2    |  1  |  4  |  1  |  25.0 |    LOR    |  10.36  |   4.77  |  21.75  |  50.33  |   29.3  |  62.38  |\n",
-      "|  acl-staging   |   us-west-2    |  1  |  4  |  1  |  25.0 |    LOR    |  16.25  |   5.61  |  62.95  |  65.84  |  39.36  |  74.69  |\n",
-      "|  acl-staging   |   us-east-1    |  3  |  3  |  3  |  N/A  |    LOR    |   5.93  |   2.34  |  48.03  |  63.53  |  33.21  |  69.57  |\n",
-      "| acl-production |   us-east-1    |  6  |  48 |  33 | 68.75 |    LOR    |  15.06  |   8.21  |   23.1  |  37.89  |  24.89  |  43.67  |\n",
-      "| acl-production |  eu-central-1  |  12 |  50 |  26 |  52.0 |    LOR    |  10.91  |   6.09  |   19.0  |  45.18  |  38.96  |  51.04  |\n",
-      "| acl-production |   af-south-1   |  4  |  32 |  4  |  12.5 |    LOR    |  11.04  |   5.4   |  19.86  |  65.53  |  53.99  |  69.38  |\n",
-      "| acl-production |  ca-central-1  |  4  |  32 |  4  |  12.5 |    LOR    |  13.31  |   6.41  |  53.04  |  60.64  |  39.14  |  67.96  |\n",
-      "| acl-production | ap-northeast-1 |  4  |  32 |  4  |  12.5 |    LOR    |   12.3  |   4.61  |  53.65  |   53.0  |  40.78  |  63.53  |\n",
-      "| acl-production | ap-southeast-1 |  6  |  48 |  6  |  12.5 |    LOR    |  22.39  |   8.28  |  54.23  |  71.34  |  60.86  |  78.14  |\n",
-      "| acl-production | ap-southeast-2 |  6  |  48 |  6  |  12.5 |    LOR    |   2.63  |   2.27  |   4.22  |  31.41  |  29.89  |  32.56  |\n",
-      "| acl-production |   sa-east-1    |  6  |  48 |  6  |  12.5 |    LOR    |  10.16  |   6.95  |  39.14  |  56.42  |  36.82  |   86.0  |\n",
+      "| acl-playground |   us-west-2    |  1  |  4  |  1  |  25.0 |    LOR    |   6.27  |   4.76  |  23.23  |  39.82  |  28.77  |  52.03  |\n",
+      "|  acl-staging   |   us-west-2    |  1  |  4  |  4  | 100.0 |    LOR    |  17.17  |   5.59  |  64.43  |  69.35  |  43.51  |  76.12  |\n",
+      "|  acl-staging   |   us-east-1    |  3  |  3  |  3  |  N/A  |    LOR    |  24.56  |   2.38  |  98.32  |  82.64  |  77.38  |   88.1  |\n",
+      "| acl-production |   us-east-1    |  6  |  48 |  20 | 41.67 |    LOR    |  22.15  |  13.58  |   30.2  |  65.01  |  61.76  |  69.37  |\n",
+      "| acl-production |  eu-central-1  |  12 |  50 |  31 |  62.0 |    LOR    |  16.27  |   9.47  |  34.57  |  60.57  |  56.02  |  65.64  |\n",
+      "| acl-production |   af-south-1   |  4  |  32 |  4  |  12.5 |    LOR    |   8.37  |   5.37  |   25.2  |  64.29  |  62.04  |  68.73  |\n",
+      "| acl-production |  ca-central-1  |  4  |  32 |  4  |  12.5 |    LOR    |  10.97  |   6.21  |   23.6  |  89.46  |   88.9  |  91.24  |\n",
+      "| acl-production | ap-northeast-1 |  4  |  32 |  4  |  12.5 |    LOR    |  11.21  |   5.46  |  28.31  |  63.06  |  56.71  |  67.16  |\n",
+      "| acl-production | ap-southeast-1 |  6  |  48 |  6  |  12.5 |    LOR    |  40.95  |  12.05  |  78.21  |  85.58  |  76.08  |  93.22  |\n",
+      "| acl-production | ap-southeast-2 |  6  |  48 |  6  |  12.5 |    LOR    |   3.08  |   2.49  |   5.94  |   43.0  |  42.33  |  43.51  |\n",
+      "| acl-production |   sa-east-1    |  6  |  48 |  6  |  12.5 |    LOR    |   9.94  |   7.8   |  18.75  |  92.45  |  91.17  |  94.93  |\n",
       "+----------------+----------------+-----+-----+-----+-------+-----------+---------+---------+---------+---------+---------+---------+\n"
      ]
     }
@@ -319,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
