--- a/cost-analyzers/get-costs-by-account.ipynb
+++ b/cost-analyzers/get-costs-by-account.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,41 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Getting cost and usage for ACL Production\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Login with IAM Identity Center required.\n",
-      "Attempting to open the authorization page in your default browser.\n",
-      "If the browser does not open or you wish to use a different device to\n",
-      "authorize this request, open the following URL:\n",
-      "\n",
-      "https://device.sso.us-west-2.amazonaws.com/\n",
-      "\n",
-      "Then enter the code:\n",
-      "\n",
-      "RVWV-JTFL\n",
-      "\n",
-      "Alternatively, you may visit the following URL which will autofill the code upon loading:\n",
-      "\n",
-      "https://device.sso.us-west-2.amazonaws.com/?user_code=RVWV-JTFL\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Getting cost and usage for ACL Production\n",
       "Getting cost and usage for ACL Services Ltd.\n",
       "Getting cost and usage for ACL Staging\n",
       "Getting cost and usage for acl-deploy\n",
@@ -521,8 +494,10 @@
    "source": [
     "\n",
     "METRIC = 'UnblendedCost'\n",
-    "DATE_FROM = '2024-01-01'\n",
-    "DATE_TO = '2024-02-01'\n",
+    "DATE_FROM = '2023-10-01'\n",
+    "DATE_TO = '2023-11-01'\n",
+    "\n",
+    "TAGS = ['projects', 'reports', 'results', 'risks', 'api_proxy', 'ernie', 'authy', 'launchpad', 'robots', 'toolkits']\n",
     "\n",
     "def get_cost_and_usage_by_services(aws_session, start, end):\n",
     "    client = aws_session.client('ce')\n",
@@ -553,8 +528,49 @@
     "\n",
     "    return cu\n",
     "\n",
+    "# Some of the accient services are tagged with highbond_service and they all live in the same account\n",
+    "# so we have to collect them separately \n",
+    "def get_cost_and_usage_by_tags(aws_session, start, end, tag):\n",
+    "    client = aws_session.client('ce')\n",
+    "    cu = []\n",
+    "    \n",
+    "    while True:\n",
+    "        data = client.get_cost_and_usage(\n",
+    "            TimePeriod={\n",
+    "                'Start': start,\n",
+    "                'End': end\n",
+    "            },\n",
+    "            Granularity='MONTHLY',\n",
+    "            Metrics=[METRIC],\n",
+    "            GroupBy=[\n",
+    "                {\n",
+    "                    'Type': 'DIMENSION',\n",
+    "                    'Key': 'REGION',\n",
+    "                },\n",
+    "                {\n",
+    "                    'Type': 'DIMENSION',\n",
+    "                    'Key': 'SERVICE',\n",
+    "                },\n",
+    "            ],\n",
+    "            Filter={\n",
+    "                \"Tags\": {\n",
+    "                    \"Key\": \"highbond_service\",\n",
+    "                    \"Values\": [\n",
+    "                        tag,\n",
+    "                    ]\n",
+    "                }\n",
+    "            },\n",
+    "        )\n",
+    "        cu += data['ResultsByTime']\n",
+    "        token = data.get('NextPageToken')\n",
+    "        if not token:\n",
+    "            break\n",
     "\n",
-    "def get_costs_and_usages(start, end):\n",
+    "    return cu\n",
+    "\n",
+    "\n",
+    "\n",
+    "def get_costs_and_usages_by_accounts(start, end):\n",
     "    start_url='https://d-9267742869.awsapps.com/start'\n",
     "    sso_region='us-west-2'\n",
     "\n",
@@ -581,9 +597,15 @@
     "                                        login=True)\n",
     "\n",
     "        try:\n",
-    "            cu = get_cost_and_usage_by_services (aws_session, start, end)\n",
-    "            cu[0]['account_name'] = login['account_name']\n",
-    "            result += cu\n",
+    "            if login['account_name'] == 'ACL Production':\n",
+    "                for tag in TAGS:\n",
+    "                    cu = get_cost_and_usage_by_tags (aws_session, start, end, tag)\n",
+    "                    cu[0]['account_name'] = f\"{login['account_name']} [{tag}]\"\n",
+    "                    result += cu\n",
+    "            else:\n",
+    "                cu = get_cost_and_usage_by_services (aws_session, start, end)\n",
+    "                cu[0]['account_name'] = login['account_name']\n",
+    "                result += cu\n",
     "        except:\n",
     "            print(f\"Error getting cost and usage for {login['account_name']}\")\n",
     "            continue\n",
@@ -595,7 +617,7 @@
     "\n",
     "\n",
     "\n",
-    "result = get_costs_and_usages(DATE_FROM, DATE_TO)\n",
+    "result = get_costs_and_usages_by_accounts(DATE_FROM, DATE_TO)\n",
     "\n",
     "# print json formated result\n",
     "# print(json.dumps(result, indent=2))\n",
@@ -637,24 +659,28 @@
     "# | ACL Production  | eu-central-1  | 54.0            | 2542        | 43567                             |   ...\n",
     "# +-----------------+---------------+-----------------+-------------+-----------------------------------+-- ...\n",
     "# | dil-audit-dev   | us-west-2     | 0.0             | 346         | 8463                              |   ...\n",
-    "# +-----------------+---------------+-----------------+-------------+-----------------------------------+-- ..."
+    "# +-----------------+---------------+-----------------+-------------+-----------------------------------+-- ...\n",
+    "\n",
+    "# export to csv\n",
+    "CSV_FILENAME = f'costs-{DATE_FROM.replace(\".\",\"-\")}.csv'\n",
+    "df.to_csv(CSV_FILENAME, index=False)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Export to CSV and Excel"
+    "# Export to Excel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export to csv\n",
-    "df.to_csv(f'costs-{DATE_FROM.replace(\".\",\"_\")}.csv', index=False)\n",
+    "# load df from CSV\n",
+    "df = pd.read_csv(CSV_FILENAME)\n",
     "\n",
     "# export df into Excel format\n",
     "file_path = 'costs.xlsx'\n",
